# pretended-blockchain

./: ChangeLog.md  README.md  pretended-blockchain.cabal
app/: Main.hs
images/: blockchain.dia
src/: Blockchain.hs
src/Blockchain/: Block.hs
src/Blockchain/Block/: Header.hs  Transaction.hs
tst/unit/: BlockSpec.hs  HeaderSpec.hs  TransactionSpec.hs
